<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/food1"
                android:contentDescription="@string/detail_image" />

            <TextView
                android:id="@+id/nameBoxFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="@string/burger"
                android:padding="2dp"
                android:layout_margin="3dp"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#F1E6E6"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/subs"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/subs"
                    android:src="@drawable/minus1" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1" />
                <ImageView
                    android:id="@+id/add"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/add"
                    android:src="@drawable/plus" />


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/descriptionDetail" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/backgraoud_detail_edit"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:autofillHints="@string/your_name" />

        <EditText
            android:id="@+id/PhoneBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/backgraoud_detail_edit"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:autofillHints="@string/phone" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar"
                android:textColor="#FF0000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:textColor="#FF0000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/orderNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/order_now" />

    </LinearLayout>

</LinearLayout>